# libgeom

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bspline.cc  geom.sln  geom.vcxproj  geometry.hh  matrix2x2.cc  matrix3x3.cc  trimesh.cc  vector.cc
